--- a/index.html
+++ b/index.html
@@ -1,16 +1,70 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg'></svg>">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>starbugs</title>
+  <title>Constellarium</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background: black;
+      color: white;
+      font-family: Arial, sans-serif;
+    }
+    #app {
+      position: relative;
+      width: 100vw;
+      height: 100vh;
+    }
+    canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: transparent;
+    }
+    .header, .filters, .footer {
+      position: absolute;
+      z-index: 10;
+    }
+    .header {
+      top: 0;
+      width: 100%;
+      text-align: center;
+      padding: 20px 0;
+      background: rgba(0, 0, 0, 0.5);
+    }
+    .filters {
+      top: 80px; /* Adjust this value if needed */
+      left: 20px;
+    }
+    .footer {
+      bottom: 0;
+      width: 100%;
+      text-align: center;
+      padding: 10px 0;
+      background: rgba(0, 0, 0, 0.5);
+      color: #666;
+      font-size: 0.8rem;
+    }
+  </style>
 </head>
-
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <canvas id="sky"></canvas>
+    <header class="header">
+      <h1 class="title">Constellarium</h1>
+    </header>
+    <div class="filters">
+      <!-- Filters will be injected here by Svelte -->
+    </div>
+    <footer class="footer">
+      <p>© 2024 Constellarium. All rights reserved.</p>
+    </footer>
+  </div>
   <script type="module" src="/src/main.js"></script>
 </body>
-
 </html>
