--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       background: rgba(0, 0, 0, 0.5);
     }
     .filters {
-      top: 80px; /* Adjust this value if needed */
+      top: 80px;
       left: 20px;
     }
     .footer {
