--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 </head>
 <body>
   <div id="app">
-    <canvas id="sky"></canvas>
     <header class="header">
       <h1 class="title">Constellarium</h1>
     </header>
     <div class="filters">
       <!-- Filters will be injected here by Svelte -->
     </div>
+    <div id="sky-container"></div>
     <footer class="footer">
       <p>© 2024 Constellarium. All rights reserved.</p>
     </footer>
