--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Constellarium</title>
-  <!-- <style>
+  <style>
     body {
       margin: 0;
       padding: 0;
@@ -68,7 +68,7 @@
       color: white;
       margin: 0;
     }
-  </style> -->
+  </style>
   <script type="module" src="/src/main.js"></script>
 </head>
 <body>
